--- a/demo/statemachine/dom.html
+++ b/demo/statemachine/dom.html
@@ -4,9 +4,7 @@
         <title>jsPlumb - state machine demonstration</title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
-        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link href="//fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
+        <link href="../../css/bootstrap.min.css" rel="stylesheet">
 
         <link rel="stylesheet" href="../../css/jsplumbtoolkit-defaults.css">
         <link rel="stylesheet" href="../../css/main.css">
@@ -35,6 +33,11 @@
                 <div class="w" id="rejected">REJECTED
                     <div class="ep" action="rejected"></div>
                 </div>
+
+                <div class="w diamond" id="condition-test-id">CONDITION
+                    <div class="ep2"></div>
+                </div>
+
             </div>
             <!-- /demo -->
             <!-- explanation -->
@@ -95,7 +98,6 @@
         <script src="../../src/base-library-adapter.js"></script>
         <!-- no library jsPlumb adapter -->
         <script src="../../src/dom.jsPlumb.js"></script>
-        <script src="../../src/bezier-editor.js"></script>
         <!-- /JS -->
 
         <!--  demo code -->
