todo calc nears ok

--- a/demo/ehome/dom.html
+++ b/demo/ehome/dom.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../../css/main.css">
         <link rel="stylesheet" href="../../css/jsplumbtoolkit-demo.css">
         <link rel="stylesheet" href="demo.css">
+        <script src="jquery.min.js"></script>
     </head>
     <body data-demo-id="statemachine">
 
@@ -83,6 +84,7 @@
         <!-- /JS -->
 
         <!--  demo code -->
+        <script src="flow.js"></script>
         <script src="demo.js"></script>
     </body>
 </html>
