--- a/demo/ehome/dom.html
+++ b/demo/ehome/dom.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>jsPlumb - state machine demonstration</title>
+        <title>FlowEditor</title>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"/>
 
@@ -12,13 +12,11 @@
         <script src="jquery.min.js"></script>
     </head>
     <body data-demo-id="statemachine">
-
-        <a style="margin:10px 0 0 10px;display:inline-block" href="https://jsplumbtoolkit.com"><img src="../../img/logo-jsplumb-green.png"></a>
-
         <div class="jtk-demo-main container">
             <div class="menu">
                 <div class="menu_button button_task" id="addTask"></div>
                 <div class="menu_button button_switch" id="addSwitch"></div>
+                <div id="id_auto_adj" style="width:100px; height:60px; border: 1px solid #333; position: absolute; bottom: -100px; left: 40px;">Auto Layout</div>
             </div>
             <!-- demo -->
             <div class="jtk-demo-canvas canvas-wide statemachine-demo jtk-surface jtk-surface-nopan" id="canvas">
